@@ -2,7 +2,9 @@
 <head><title>JavaScript Support</title></head>
 <body>
 <p>
-JavaScript support is very basic at present. Inline deferred scripts (which define functions) are supported,
+JavaScript support is very basic at present. The near-term goal is full JavaScript 1.1 support. Currently, we do not plan
+to support browser-specific JavaScript. Please let us know via the mailing list your priorities for missing features.
+Inline deferred scripts (which define functions) are supported,
 as are the following DOM elements:
 
 <h3>Window</h3>
