@@ -12,9 +12,10 @@ bypass the browser and access a site from a program, including:
 
 HttpUnit makes this easy. Written in Java,
 HttpUnit emulates the relevant portions of browser behavior, including
-form submission, basic <A HREF="ftp://ftp.isi.edu/in-notes/rfc2617.txt">http authentication</A>,
+form submission, <a href="doc/JavaScript-support.html">JavaScript</a>,
+basic <A HREF="ftp://ftp.isi.edu/in-notes/rfc2617.txt">http authentication</A>,
 cookies and automatic page redirection, and allows
-Java test code to examine returned pages as text, an XML DOM, or containers of forms, tables, and links.</P>
+Java test code to examine returned pages either as text, an XML DOM, or containers of forms, tables, and links.</P>
 <P>
 A companion framework, <A HREF="doc/servletunit-intro.html">ServletUnit</A> is included in the download.
 </P>
@@ -26,7 +27,7 @@ A companion framework, <A HREF="doc/servletunit-intro.html">ServletUnit</A> is i
 <strong>HttpUnit</strong> is a free, <A HREF="doc/license.html">open source</A> Java API for accessing web sites without a browser,
 and is ideally suited for automated unit testing of web sites when combined with a
 Java unit test framework such as <A HREF="http://www.junit.org">JUnit</a>.
-It was designed and implemented by <a href="mailto:russgold@users.sourceforge.net">Russell Gold.</a></blockquote>
+It was designed and implemented by <a href="mailto:russgold@httpunit.org">Russell Gold.</a></blockquote>
 
 <h2>Documentation</h2>
 <blockquote>A rudimentary <A HREF="doc/Cookbook.html">User's manual</A> is
